--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -43,10 +43,19 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ env.JAVA_VERSION }}-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-${{ env.JAVA_VERSION }}-
 
-      - name: Build with Gradle (wrapper)
-        # If your Gradle task that packages with Launch4j is different (e.g. `launch4j`), replace `build` with that task.
-        run: .\gradlew.bat clean build --no-daemon
-        shell: cmd
+      - name: Build with Gradle (wrapper or system)
+        shell: powershell
+        run: |
+          # Prefer the Gradle wrapper if present; otherwise install Gradle and use the system gradle.
+          if (Test-Path -Path .\gradlew.bat) {
+            Write-Host "Found gradlew.bat — using Gradle wrapper"
+            & .\gradlew.bat clean build --no-daemon
+          } else {
+            Write-Host "No gradlew.bat found — installing Gradle with Chocolatey and using system gradle"
+            choco install gradle -y
+            gradle --version
+            gradle clean build
+          }
 
       - name: Run Ant build (if build.xml exists)
         shell: powershell
