--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,10 @@
     <pathelement location="${build.test}" />
   </path>
 
+  <taskdef resource="org/apache/ivy/ant/antlib.xml"
+         uri="antlib:org.apache.ivy.ant"
+         classpath="lib/ivy.jar"/>
+  
   <target name="resolve" description="retrieve dependencies with ivy">
     <mkdir dir="${lib.dl}" />
     <ivy:retrieve/>
