--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -2,60 +2,46 @@ name: Windows Build
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [ "master", "main" ]
   pull_request:
-  workflow_dispatch:
+    branches: [ "master", "main" ]
 
 jobs:
-  build-windows:
+  build:
     runs-on: windows-latest
 
+    permissions:
+      contents: read
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '8'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Install build tooling
-        shell: powershell
-        run: |
-          choco install ant --yes --no-progress
-          choco install gradle --yes --no-progress
-          choco install launch4j --yes --no-progress
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: '8.5'
 
-      - name: Configure Launch4j
-        shell: powershell
-        run: |
-          $launch4jPath = 'C:\ProgramData\chocolatey\lib\launch4j\tools\launch4j'
-          "launch4j.path=$launch4jPath" | Out-File -FilePath "launch4j.properties" -Encoding ASCII
+    - name: Build with Gradle
+      run: ./gradlew build
+      # Fallback to system gradle if wrapper not found (we are NOT committing wrapper):
+      # actually standard 'gradle' might work if setup-gradle puts it in path, 
+      # but let's use the wrapper if we can generate it, or just use 'gradle' command.
+      # Since we don't have a wrapper in the repo, we'll rely on the setup-gradle action 
+      # which adds 'gradle' to the path.
+      if: hashFiles('gradlew') != ''
+      
+    - name: Build with Gradle (No Wrapper)
+      if: hashFiles('gradlew') == ''
+      run: gradle build createExe --info
 
-      - name: Resolve Ivy dependencies
-        shell: powershell
-        run: ant -f build.xml resolve
-
-      - name: Run Gradle build (if available)
-        shell: powershell
-        run: |
-          if (Test-Path ".\gradlew.bat") {
-            ./gradlew.bat clean build
-          } elseif (Get-Command gradle -ErrorAction SilentlyContinue) {
-            gradle clean build
-          } else {
-            Write-Host "Gradle wrapper or installation not found; skipping Gradle build."
-          }
-
-      - name: Build Windows executables with Ant
-        shell: powershell
-        run: ant -f build.xml dist.win
-
-      - name: Upload Windows artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tvrenamer-windows-dist
-          path: dist/**
+    - name: Upload EXE Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: TVRenamer-Windows-EXE
+        path: build/launch4j/TVRenamer.exe
