--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,70 @@
-apply plugin: 'java'
-apply plugin: 'application'
+plugins {
+    id 'java'
+    id 'application'
+    id 'edu.sc.seis.launch4j' version '3.0.5'
+}
 
-mainClassName = "org.tvrenamer.controller.Launcher"
+group = 'org.tvrenamer'
+version = '1.0.0-SNAPSHOT'
 
-// Only for MacOS
-applicationDefaultJvmArgs = ["-XstartOnFirstThread"]
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.eclipse.swt', name: 'org.eclipse.swt.cocoa.macosx.x86_64', version: '4.3'
-    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.9'
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
-    compile group: 'xmlpull', name: 'xmlpull', version: '1.1.3.1'
-    compile group: 'xpp3', name: 'xpp3_min', version: '1.1.4c'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.8.0'
-    compile group: 'com.squareup.okio', name: 'okio', version: '1.13.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    // SWT - using platform specific dependency for Windows build
+    implementation 'org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.124.0'
+    
+    // Core dependencies - modernized
+    implementation 'com.thoughtworks.xstream:xstream:1.4.20'
+    implementation 'commons-codec:commons-codec:1.16.0'
+    implementation 'xpp3:xpp3_min:1.1.4c' // Often needed by XStream legacy
+    implementation 'xmlpull:xmlpull:1.1.3.1'
+    
+    // Networking
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
 }
 
-uploadArchives {
-    repositories {
-        flatDir {
-            dirs 'dist'
+application {
+    mainClass = 'org.tvrenamer.controller.Launcher'
+    // Default JVM args if needed
+    // applicationDefaultJvmArgs = []
+}
+
+launch4j {
+    mainClassName = 'org.tvrenamer.controller.Launcher'
+    icon = "${projectDir}/src/main/resources/icons/oldschool-tv-icon.ico"
+    jarTask = project.tasks.jar
+    outfile = "TVRenamer.exe"
+    downloadUrl = "http://java.com/download"
+    headerType = "gui"
+    jreRuntimeBits = "64"
+    jreMinVersion = "17"
+}
+
+// Ensure resources are copied if they are in src/main/resources or similar
+// If source structure is non-standard, we might need to configure sourceSets
+sourceSets {
+    main {
+        java {
+            srcDir 'src/main/java'
+        }
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+    test {
+        java {
+            srcDir 'src/test/java'
         }
     }
 }
