Fix: Replace deprecated jreRuntimeBits with requires64Bit

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ launch4j {
     outfile = "TVRenamer.exe"
     downloadUrl = "http://java.com/download"
     headerType = "gui"
-    jreRuntimeBits = "64"
+    requires64Bit = true
     jreMinVersion = "17"
 }
 
