--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'edu.sc.seis.launch4j' version '3.0.5'
 }
 
+
+ext {
+    // Define osgi.platform for SWT dependency resolution
+    setProperty('osgi.platform', 'win32.win32.x86_64')
+}
+
 group = 'org.tvrenamer'
 version = '1.0.0-SNAPSHOT'
 
