--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ repositories {
 
 dependencies {
     // SWT - using platform specific dependency for Windows build
-    implementation 'org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.124.0'
+    // Exclude transitive dependencies to prevent resolution of '${osgi.platform}'
+    implementation('org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.124.0') {
+        transitive = false
+    }
     
     // Core dependencies - modernized
     implementation 'com.thoughtworks.xstream:xstream:1.4.20'
