Feat: Bundle JRE with executable using jlink

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -40,8 +40,17 @@ jobs:
       if: hashFiles('gradlew') == ''
       run: gradle build createExe --info
 
-    - name: Upload EXE Artifact
+    - name: Create Custom JRE with jlink
+      run: |
+        $JAVA_HOME = $env:JAVA_HOME_17_X64
+        & "$JAVA_HOME\bin\jlink" --add-modules java.base,java.desktop,java.logging,java.xml,java.scripting,java.management,java.naming,jdk.unsupported --output build/launch4j/jre --strip-debug --compress 2 --no-header-files --no-man-pages
+
+    - name: Package Release Zip
+      run: |
+        Compress-Archive -Path build/launch4j/* -DestinationPath build/TVRenamer-Windows.zip
+
+    - name: Upload Zip Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: TVRenamer-Windows-EXE
-        path: build/launch4j/TVRenamer.exe
+        name: TVRenamer-Windows-Zip
+        path: build/TVRenamer-Windows.zip
