Remove JRE bundling, add fat JAR output
- Removed bundledJrePath from Launch4j config (users need Java installed)
- Added fatJar task to create executable JAR with all dependencies
- Updated GitHub Actions workflow:
  - Removed jlink step
  - Now uploads EXE and fat JAR as separate artifacts

--- a/build.gradle
+++ b/build.gradle
@@ -58,11 +58,23 @@ launch4j {
     headerType = "gui"
     requires64Bit = true
     jreMinVersion = "17"
-    bundledJrePath = "jre"
 }
 
 tasks.named('processResources') {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+// Create a fat JAR with all dependencies
+tasks.register('fatJar', Jar) {
+    archiveClassifier = 'all'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    manifest {
+        attributes 'Main-Class': 'org.tvrenamer.controller.Launcher'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
 }
 
 // Ensure resources are copied if they are in src/main/resources or similar
