--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -28,19 +28,16 @@ jobs:
         gradle-version: '8.5'
 
     - name: Build with Gradle
-      run: gradle build createExe --info
+      run: gradle build createExe fatJar --info
 
-    - name: Create Custom JRE with jlink
-      run: |
-        $JAVA_HOME = $env:JAVA_HOME_17_X64
-        & "$JAVA_HOME\bin\jlink" --add-modules java.base,java.desktop,java.logging,java.xml,java.scripting,java.management,java.naming,jdk.unsupported --output build/launch4j/jre --strip-debug --compress 2 --no-header-files --no-man-pages
-
-    - name: Package Release Zip
-      run: |
-        Compress-Archive -Path build/launch4j/* -DestinationPath build/TVRenamer-Windows.zip
-
-    - name: Upload Zip Artifact
+    - name: Upload Windows Executable
       uses: actions/upload-artifact@v4
       with:
-        name: TVRenamer-Windows-Zip
-        path: build/TVRenamer-Windows.zip
+        name: TVRenamer-Windows-Exe
+        path: build/launch4j/TVRenamer.exe
+
+    - name: Upload Fat JAR
+      uses: actions/upload-artifact@v4
+      with:
+        name: TVRenamer-Fat-JAR
+        path: build/libs/*-all.jar
