Use Shadow plugin for integrated JAR with SWT
- Added Shadow plugin (8.1.1) for proper fat JAR creation
- Shadow preserves SWT native library structure correctly
- Removed custom fatJar/copySwtJar/createDist tasks
- JAR can now be run with: java -jar tvrenamer-all.jar

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -28,7 +28,7 @@ jobs:
         gradle-version: '8.5'
 
     - name: Build with Gradle
-      run: gradle build createExe fatJar --info
+      run: gradle build createExe shadowJar --info
 
     - name: Upload Windows Executable
       uses: actions/upload-artifact@v4
@@ -36,8 +36,8 @@ jobs:
         name: TVRenamer-Windows-Exe
         path: build/launch4j/TVRenamer.exe
 
-    - name: Upload Fat JAR
+    - name: Upload Integrated JAR
       uses: actions/upload-artifact@v4
       with:
-        name: TVRenamer-Fat-JAR
+        name: TVRenamer-JAR
         path: build/libs/*-all.jar
