--- a/build.gradle
+++ b/build.gradle
@@ -30,16 +30,16 @@ dependencies {
     implementation('org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.124.0') {
         transitive = false
     }
-    
+
     // Core dependencies - modernized
     implementation 'com.thoughtworks.xstream:xstream:1.4.20'
     implementation 'commons-codec:commons-codec:1.16.0'
     implementation 'xpp3:xpp3_min:1.1.4c' // Often needed by XStream legacy
     implementation 'xmlpull:xmlpull:1.1.3.1'
-    
+
     // Networking
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    
+
     // Testing
     testImplementation 'junit:junit:4.13.2'
 }
@@ -53,7 +53,7 @@ application {
 launch4j {
     mainClassName = 'org.tvrenamer.controller.Launcher'
     icon = "${projectDir}/src/main/resources/icons/oldschool-tv-icon.ico"
-    jarTask = project.tasks.jar
+    jarTask = project.tasks.shadowJar
     outfile = "TVRenamer.exe"
     downloadUrl = "http://java.com/download"
     headerType = "gui"
@@ -67,7 +67,7 @@ tasks.named('processResources') {
 
 // Shadow plugin configuration for integrated JAR with all dependencies
 shadowJar {
-    archiveClassifier = 'all'
+    archiveClassifier.set('')
     mergeServiceFiles()
     // Ensure proper handling of SWT and native libraries
 }
@@ -78,6 +78,14 @@ sourceSets {
     main {
         java {
             srcDir 'src/main/java'
+        }
+
+        tasks.named('jar') {
+            enabled = false
+        }
+
+        tasks.named('launch4j') {
+            dependsOn shadowJar
         }
         resources {
             srcDir 'src/main/resources'
