Fix task dependency to use createExe instead of launch4j

--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,6 @@ tasks.named('jar') {
     enabled = false
 }
 
-tasks.named('launch4j') {
+tasks.named('createExe') {
     dependsOn(tasks.named('shadowJar'))
 }
