--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.thoughtworks.xstream:xstream:1.4.20'
     implementation 'commons-codec:commons-codec:1.16.0'
     implementation 'xpp3:xpp3_min:1.1.4c' // Often needed by XStream legacy
-    implementation 'xmlpull:xmlpull:1.1.3.1'
+    // xmlpull is already provided transitively via xstream -> mxparser -> xmlpull
 
     // Networking
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
