--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     // Core dependencies - modernized
     implementation 'com.thoughtworks.xstream:xstream:1.4.20'
     implementation 'commons-codec:commons-codec:1.16.0'
-    implementation 'xpp3:xpp3_min:1.1.4c' // Often needed by XStream legacy
+    // xpp3_min was historically used with XStream, but XStream can use its own defaults.
+    // If XML parsing regressions appear, re-add xpp3_min or explicitly configure the parser.
     // xmlpull is already provided transitively via xstream -> mxparser -> xmlpull
 
     // Networking
