Add agents guide and start tracking docs
Add agents.md with build/tooling notes (Gradle, PowerShell/Windows, GitHub Actions, gh CLI). Stop ignoring docs/ so planning/spec docs can be committed, and add placeholder to track the directory.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /dist/
 /lib/
 /build/
-/docs/
+# docs/ is tracked (do not ignore) so feature specs and planning docs can be committed
 *.jar
 
 launch4j.properties
