Track Gradle wrapper jar
Stop ignoring gradle/wrapper/gradle-wrapper.jar so the Gradle wrapper works out of the box. Also update agents.md docs note.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /build/
 # docs/ is tracked (do not ignore) so feature specs and planning docs can be committed
 *.jar
+!gradle/wrapper/gradle-wrapper.jar
 
 launch4j.properties
 /package/macosx/
