Ignore local artifacts directory
Add /artifacts/ to .gitignore to avoid committing downloaded CI artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.jar
 !gradle/wrapper/gradle-wrapper.jar
 
+# Local downloads (e.g., `gh run download --dir ./artifacts`)
+/artifacts/
+
 launch4j.properties
 /package/macosx/
 
