Add multi-episode filename support (E04E05, E04-E06)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /dist/
 /lib/
 /build/
+/bin/
 # docs/ is tracked (do not ignore) so feature specs and planning docs can be committed
 *.jar
 !gradle/wrapper/gradle-wrapper.jar
